plugins {
	id "java"
	id 'io.freefair.aspectj.post-compile-weaving' version '8.1.0'
}

group "uk.gov.di.ipv"

repositories {
	mavenCentral()
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
	implementation "com.amazonaws:aws-lambda-java-core:1.2.1",
			"com.nimbusds:oauth2-oidc-sdk:9.27",
			"org.apache.logging.log4j:log4j-api:2.17.1",
			"org.apache.logging.log4j:log4j-core:2.17.1",
			project(":di-ipv-cimit-stub:lib")

	compileOnly "org.projectlombok:lombok:1.18.28"
	annotationProcessor "org.projectlombok:lombok:1.18.28"

	aspect "software.amazon.lambda:powertools-logging:1.16.1",
			"software.amazon.lambda:powertools-tracing:1.16.1"
	aspect('org.aspectj:aspectjrt') {
		version {
			strictly '1.9.8'
		}
	}

	testImplementation "org.junit.jupiter:junit-jupiter:5.10.2",
			"org.mockito:mockito-junit-jupiter:5.4.0",
			'uk.org.webcompere:system-stubs-jupiter:2.1.6'
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
	useJUnitPlatform ()
}
